Added CRUD operations for all the users.
