# routes/index.js
@@ -5,14 +5,18 @@ const cors = require("cors");
 // Use CORS middleware
 router.use(cors());
 
-router.use("/", require("./swagger"));
-router.use("/movies/", require("./moviesRoute"));
-router.use("/cast/", require("./castsRoute"));
-
 // Root path handler for authentication
 router.get("/", (req, res) => {
   res.render("auth");
 });
+
+router.use("/", require("./swagger"));
+router.use("/movies/", require("./moviesRoute"));
+router.use("/cast/", require("./castsRoute"));
+
+router.use("/go-users/", require("./googleRoute"));
+router.use("/gi-users/", require("./githubRoute"));
+router.use("/fa-users/", require("./facebookRoute"));
 
 // Define authentication routes
 router.use("/auth/google", require("../controllers/google-auth"));
